-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.1.2, Qt Creator 3.2.0
-
None
-
Windows 7
x86_64
If I debug an android application without signing it, everything works as expected - GDB connects up, and I can break into the code and step through it etc.
However, if I sign my package with a key (Run Settings/Deployment/Sign Package) for a Debug build configuration, GDB fails to connect.
Below is sample logcat output that shows the debug failure. The application still runs, but cannot be debugged.
09-14 21:39:11.830: I/Qt(13090): Network start 09-14 21:39:11.860: I/Qt(13090): qt start 09-14 21:39:12.090: I/Qt JAVA(13090): DEBUGGER: extra parameters: Bundle[{pong_file=/data/local/tmp/qt/debug-pong-com.my.app, use_local_qt_libs=true, load_local_jars=jar/QtAndroid-bundled.jar:jar/QtAndroidAccessibility-bundled.jar:jar/QtMultimedia-bundled.jar:, debug_ping=true, gdbserver_socket=/data/data/com.my.app/debug-socket, static_init_classes=org.qtproject.qt5.android.multimedia.QtMultimediaUtils:, libs_prefix=/data/local/tmp/qt/, load_local_libs=plugins/platforms/android/libqtforandroid.so:plugins/mediaservice/libqtmedia_android.so:, gdbserver_command=/data/data/com.my.app/lib/gdbserver --multi +/data/data/com.my.app/debug-socket, ping_file=/data/data/com.my.app/debug-ping}] 09-14 21:39:12.090: I/Qt JAVA(13090): DEBUGGER: removing ping file /data/data/com.my.app/debug-ping 09-14 21:39:12.090: I/Qt JAVA(13090): DEBUGGER: removing pong file /data/local/tmp/qt/debug-pong-com.my.app 09-14 21:39:12.090: I/Qt JAVA(13090): DEBUGGER: starting /data/data/com.my.app/lib/gdbserver --multi +/data/data/com.my.app/debug-socket 09-14 21:39:12.100: E/Qt JAVA(13090): Can't start debuggerError running exec(). Command: [/data/data/com.my.app/lib/gdbserver, --multi, +/data/data/com.my.app/debug-socket] Working Directory: null Environment: null 09-14 21:39:12.140: D/Qt(13090): ..\..\..\..\puma\source\core\main.cpp:180 (int main(int, char**)): Main Thread (13090 1698403696) Starting