Android: Be explicit on whether gdbserver should be added to the package

Change-Id: I2a03e243678263441d64884dbd5245b8ec2ba9c7
Task-number: QTCREATORBUG-13035
Reviewed-by: BogDan Vatra <bogdan@kdab.com>